Revision history for {{$dist->name}}

{{$NEXT}}

0.08_06   2014-07-03 07:52:50 -0400
  - generic implementation for system_install function
  - added Alien::Install::Role::FTP
  - added Alien::Libffi::Installer
  - added Alien::Install::Role::VersionSortSimple
  - added Alien::Install::Role::VersionSortMultiple

0.08_05   2014-07-02 08:41:53 -0400
  - generic implementation for dlls function

0.08_04   2014-07-01 15:55:34 -0400
  - Add Alien::Install::Example::Libarchive::Installer
  - internal refactor

0.08_03   2014-06-30 06:51:20 -0400
  - Skip LZO network tests unless running under dev or travis

0.08_02   2014-06-28 06:24:35 -0400
  - Adding Alien::LZO::Installer

0.08_01   2014-06-26 22:28:00 -0400
  - Combining Alien::Libarchive::Installer and
    Alien::bz2::Installer into one distro
  - Major internal reorganization to use Alien::Install
  - tar option on build_install is deprecated in favor of archive
    both will work until at least December 31, 2014, at which point
    tar may be removed

0.08      2014-06-22 09:25:19 -0400
  - promote to production

0.07_01   2014-06-21 07:58:36 -0400
  - more robust dll / dylib / .so file detection (GH#2)

0.07      2014-06-19 07:43:55 -0400
  - only use Alien::Libarchive if it is 0.21 or better
    as 0.19-0.20 may result in infinite recursion

0.06      2014-06-18 15:45:11 -0400
  - fix system_install / Alien::Libarchive combination
  - tests do not require internet connection

0.05      2014-06-11 05:23:31 -0400
  - make t/versions_available.t contingent on HTTP::Tiny

0.04      2014-06-10 12:48:25 -0400
  - fix test failure when HTTP::Tiny is not installed

0.03      2014-06-10 09:41:05 -0400
  - fix version for Alien::MSYS

0.02      2014-06-10 06:09:09 -0400
  - added alien option for system_install
  - keep symbolic links as symbolic links when copy to dll directory

0.01      2014-06-09 16:46:04 -0400
  - initial version