@@ -3,7 +3,7 @@ language: perl
 install:
   - perlbrew list
   - sudo apt-get update
-  - sudo apt-get install libarchive-dev
+  - sudo apt-get install libarchive-dev libffi-dev
   - cpanm -n Dist::Zilla
   - dzil authordeps --missing | cpanm -n
   - cpanm -n Test::CPAN::Changes Test::EOL Test::Fixme Test::NoTabs Test::Pod::Spelling::CommonMistakes Test::Spelling Test::Strict Test::Version Test::Vars || true
