@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - completed implementation for Alien::Libffi::Installer
 
 0.08_06   2014-07-03 07:52:50 -0400
   - generic implementation for system_install function
